--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,38 +1,27 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tareita Nuevas Tec.</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../CSS/main.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="../JavaScript/main.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="../CSS/index.css">
 </head>
-
 <body>
     <!-- Slideshow container -->
 <div class="slideshow-container">
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
-      <div class="numbertext">1 / 3</div>
-      <img src="../Resources/Kitty.png" style="width:100%">
-      <div class="text">Caption Text</div>
+      <img src="../Resources/Kitty.png" style="width:100%; height: 250px;">
     </div>
   
     <div class="mySlides fade">
-      <div class="numbertext">2 / 3</div>
       <img src="../Resources/Kitty.png" style="width:100%">
-      <div class="text">Caption Two</div>
     </div>
   
     <div class="mySlides fade">
-      <div class="numbertext">3 / 3</div>
       <img src="../Resources/Kitty.png" style="width:100%">
-      <div class="text">Caption Three</div>
     </div>
   
     <!-- Next and previous buttons -->
@@ -47,6 +36,6 @@
     <span class="dot" onclick="currentSlide(2)"></span> 
     <span class="dot" onclick="currentSlide(3)"></span> 
   </div>
+  <script src="../JavaScript/index.js"></script>
 </body>
-
 </html>
