--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>IndexK</title>
     <link rel="stylesheet" href="../CSS/index.css">
 </head>
 <body>
@@ -13,15 +13,15 @@
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
-      <img src="../Resources/Kitty.png" style="width:100%; height: 250px;">
+      <a href="github.html"><img src="../Resources/Kitty.png" style="width:100%; height: 250px;"></a>
     </div>
   
     <div class="mySlides fade">
-      <img src="../Resources/Kitty.png" style="width:100%">
+      <a href="java.html"><img src="../Resources/java.jpg" style="width:100%; height: 250px;"></a>
     </div>
   
     <div class="mySlides fade">
-      <img src="../Resources/Kitty.png" style="width:100%">
+      <a href="html5.html"><img src="../Resources/html.jpg" style="width:100%; height: 250px;"></a>
     </div>
   
     <!-- Next and previous buttons -->
